fix scrollbar on windows

--- a/app/styles/components/_categorypage.scss
+++ b/app/styles/components/_categorypage.scss
@@ -34,8 +34,7 @@
 .category-items {
   @extend %flex-row;
   margin: 0 auto;
-  flex-wrap: wrap;
-  justify-content: center;
+  overflow: auto;
 }
 
 .category-item {
@@ -49,7 +48,9 @@
   border: 1px solid #E0E0E0;
   border-radius: 3px;
   background-color: $color-white;
-  margin: calc-em(5px);
+  &:not(:last-child) {
+    margin-right: calc-em(10px);
+  }
   &:active, &:hover, &:focus {
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
   }
